--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>novusnoctis</title>
+  <title>nacht0x</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=VT323&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -362,10 +362,10 @@
 <body>
   <div class="container">
     <header>
-      <div class="site-title">novusnoctis</div>
-      <div class="site-tagline">// dispatches from the new dark</div>
+      <div class="site-title">nacht0x</div>
+      <div class="site-tagline">// writing from inside the machine</div>
       <div class="prompt-line">
-        <span>root@novusnoctis</span>:~$ cat thoughts.log<span class="cursor"></span>
+        <span>root@nacht0x</span>:~$ cat thoughts.log<span class="cursor"></span>
       </div>
     </header>
 
@@ -412,13 +412,13 @@
         <p>
           writing about <span>AI</span>, technology, and the places they get weird.<br>
           unfiltered. not representing anyone but myself.<br>
-          <span>novusnoctis</span> — new night. new dark. something forming.
+          <span>nacht0x</span> — hex for the dark. something forming.
         </p>
       </div>
     </main>
 
     <footer>
-      <div>© novusnoctis 2026</div>
+      <div>© nacht0x 2026</div>
       <div class="status">
         <div class="dot"></div>
         <span>signal active</span>
